[package]
name = "meow-cli"
version = "2.1.5"
edition = "2021"
authors = ["PixelSergey <sergey.ichtchenko@gmail.com>"]
license = "MIT"
description = "Print ASCII cats to your terminal"
readme = "README.md"
homepage = "https://github.com/PixelSergey/meow"
repository = "https://github.com/PixelSergey/meow"
keywords = ["cli", "terminal", "utility", "text", "game"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
clap-num = "1.2.0"
glob = "0.3.3"
include_dir = { version = "0.7.4", features = ["glob"] }
rand = "0.9.2"
